# backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  crates.js  docker-compose.yml  help.html  index.html  release.sh  search-index.js  settings.html  src-files.js
.github/workflows/: cd.yml  docs.yml
assets/sounds/: readme.md
cas/: all.html  fn.create_app.html  fn.main.html  index.html  sidebar-items.js
cas/audio/: fn.show_file.html  fn.tts.html  index.html  sidebar-items.js
cas/config/: index.html  sidebar-items.js  struct.CONFIG.html  struct.Configuration.html
cas/db/: fn.setup.html  index.html
cas/errors/: enum.AppError.html  index.html
cas/expo/: fn.send.html  fn.setup.html  index.html  sidebar-items.js  static.EXPO_CONNECTION.html
cas/graphql/: index.html  sidebar-items.js
cas/graphql/mutation/: index.html  sidebar-items.js  struct.Mutation.html
cas/graphql/query/: index.html  struct.Query.html
cas/graphql/routes/: fn.graphql_handler.html  index.html  sidebar-items.js
cas/graphql/types/: index.html  sidebar-items.js
cas/logger/: fn.setup.html  index.html
cas/routes/: fn.page_404.html  index.html  sidebar-items.js  struct.JsonCreate.html
cas/state/: index.html  struct.AppState.html
k8s/: cas-deployment.yaml  cas-secret.yaml  cas-service.yaml
schema/: init.sql
scripts/: k8s  release
search.desc/cas/: cas-desc-0-.js
src/: audio.rs  config.rs  dates.rs  db.rs  errors.rs  expo.rs  graphql.rs  logger.rs  main.rs  routes.rs  state.rs
src/cas/: audio.rs.html  config.rs.html  db.rs.html  errors.rs.html  expo.rs.html  logger.rs.html  main.rs.html  routes.rs.html  state.rs.html
src/cas/graphql/: mod.rs.html  mutation.rs.html  query.rs.html  routes.rs.html
src/graphql/: mod.rs  mutation.rs  query.rs  routes.rs  types.rs
src/graphql/types/: alert.rs  (+5 more)
trait.impl/lazy_static/: trait.LazyStatic.js
trait.impl/postgres_types/: trait.FromSql.js  trait.ToSql.js
(+101 files in other folders)
