[package]
name = "cas"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "7.0.7"
async-graphql-axum = "7.0.7"
axum = "0.7.5"
config = "0.14.0"
futures-util = "0.3.30"
postgis = "0.9.0"
serde_json = "1.0.125"
tokio = { version = "1.38.1", features = ["rt"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-http = { version = "0.5.2", features = ["trace", "compression-br", "propagate-header", "sensitive-headers"] }
lazy_static = "1.5.0"
serde = { version = "1.0.208", features = ["derive"] }
tokio-postgres = "0.7.11"
