[package]
name = "cas"
version = "0.8.2"
edition = "2021"
authors = ["Santo Cariotti <santo@dcariotti.me>", "Luca Polese <luca.polese@studio.unibo.it>"]
documentation = "https://cas-4.github.io/backend/cas/index.html"
homepage = "https://github.com/cas-4/backend"
repository = "https://github.com/cas-4/backend"
description = "A GraphQL API for the Alert CAS project"
readme = "README.md"

[dependencies]
async-graphql = "7.0.11"
async-graphql-axum = "7.0.11"
axum = "0.7.5"
config = "0.14.0"
futures-util = "0.3.30"
postgis = "0.9.0"
serde_json = "1.0.125"
tokio = { version = "1.38.1", features = ["rt"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-http = { version = "0.6.1", features = ["trace", "cors", "compression-br", "propagate-header", "sensitive-headers"] }
lazy_static = "1.5.0"
serde = { version = "1.0.208", features = ["derive"] }
tokio-postgres = "0.7.11"
jsonwebtoken = "9.3.0"
once_cell = "1.19.0"
chrono = { version = "0.4.38", features = ["serde"] }
sha256 = "1.5.0"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
bytes = "1"
expo_push_notification_client = "0.4.1"
reqwest = { version = "0.12.7", features = ["json"] }
